# GL

./: CMakeLists.txt  FileHandler.cpp  FileHandler.h  README.md  Shader.cpp  Shader.h  glfwAndGLnotes  main.cpp  readfromfilestuff.txt
Shaders/: basic.frag  basic.vert
